# dungeon-master

./: .env.example  .gitignore  README.md  RETRY_FEEDBACK.md  buy-over-build-shortlist.md  pyproject.toml  setup.py  test_retry_patch.py  vr-toolkit-comparison.md
app/: __init__.py  __main__.py  config.py  logging_setup.py  main.py  world.py
app/engine/: __init__.py  command_parser.py  conversation.py  game_loop.py  llm_client.py  prompt_engine.py
app/models/: __init__.py  database.py  game_state.py  seeds.py
docs/: BRANCH_NOTES.md
tests/: __init__.py  test_app.py  test_database.py  test_engine.py  test_game_state.py
